bug fix: backgroundimage in hero does not display on mobile devices

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -141,12 +141,17 @@ Miguel Nunez for the basic layout & functions of the hamburger menu
     .navbar {
         gap: 50%;
     }
+
+
+    #hero-image {
+        background-position: top center;
+    }
 }
 
 /*Hero Section*/
 #hero {
-    width: 100vw;
-    height: 70vw;
+    width: 100%;
+    height: 90vh;
     position: relative;
     top: 10vh;
     border-bottom: 2px solid white;
@@ -162,6 +167,7 @@ Miguel Nunez for the basic layout & functions of the hamburger menu
     background-position: center;
     background-clip: padding-box;
 }
+
 
 /* Backdrop filter effect for hero image */
 
